[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molq"
version = "0.0.1"
authors = [
    {name = "Roy Kid", email = "lijichen365@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pydantic",
    "click>=8.0"
]

[project.scripts]
molq = "molq.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "coverage",
    "build",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
where = ["src"]
