[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molcrafts-molq"
version = "0.5.0"
description = "Unified job queue for local execution and HPC schedulers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Roy Kid", email = "lijichen365@gmail.com" }
]
keywords = ["job", "queue", "cluster", "slurm", "hpc", "scheduler"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "typer>=0.9",
  "rich>=14.3.3",
  "molcrafts-mollog",
  "molcrafts-molcfg",
]

[project.urls]
Homepage = "https://github.com/MolCrafts/molq"
Documentation = "https://github.com/MolCrafts/molq/tree/master/docs"
Repository = "https://github.com/MolCrafts/molq"
Issues = "https://github.com/MolCrafts/molq/issues"
Changelog = "https://github.com/MolCrafts/molq/blob/master/CHANGELOG.md"

[project.scripts]
molq = "molq.cli.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock",
  "pytest-cov",
  "coverage[toml]",
  "build",
  "ruff",
  "ty",
]
docs = [
  "zensical>=0.0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["molq*"]

[tool.setuptools.package-data]
molq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
